--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,31 @@
     <title>Bookers2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script src="https://kit.fontawesome.com/*******.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  
   <body>
-    <%= yield %>
+    <header>
+      <%= render "layouts/navbar" %>
+    </header>
+
+    <main>
+      <%= render "layouts/flash_messages" %>
+      <div class="container px-5 px-sm-0 mt-3">
+        <%= yield %>
+      </div>
+    </main>
+
+    <footer>
+      <div class='container mt-5'>
+  	    <div class='row'>
+    	    <div class='mx-auto'>
+    		    <p>CopyRight Infratop.inc</p>
+    	    </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
