--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
-<%= render "layouts/error_messages", message: @book %>
 <div class="row">
   <div class='col-md-3'>
     <%= render "users/user_info", user: current_user %>
     <%= render "books/new_book", book: @book %>
   </div>
   <div class='col-md-8 offset-md-1'>
-    <%= render "books/books_table", books: @books %>
+    <%= render "users/users_table", users: @users %>
   </div>
 </div>
