--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,9 @@
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
+<div class="row">
+  <div class='col-md-3'>
+    <%= render "users/user_info", user: @user %>
+    <%= render "books/new_book", book: @book %>
+  </div>
+  <div class='col-md-8 offset-md-1'>
+    <%= render "books/books_table", books: @user.books %>
+  </div>
 </div>
-
-
-
-<% @books.each do |book| %>
-<div>
-  <%= link_to book_path(book.id) do %>
-  <% end %>
-  <p>投稿ユーザー画像：</p>
-  <p>name：<%= user.name %></p>
-  <p>Opinion：<%= user.body %></p>
-</div>
-<% end %>
