[Add]Comment&Likes機能

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,6 +6,8 @@
   </div>
   <div class="col-md-8 offset-md-1">
     <%= render "books/book_table", book: @book %>
+    <%= render 'books/comment', book: @book,book_comment: @book_comment%>
   </div>
   
-  <h3>comments</h3>
+ 
+  
