--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,12 @@
     </header>
 
     <main>
-      <%= render "layouts/flash_messages" %>
+      
+      <% if user_signed_in? %>
+          <%= render 'layouts/search' %>
+      <% end %>
+        
+        <%= render "layouts/flash_messages" %>
       <div class="container px-5 px-sm-0 mt-3">
         <%= yield %>
       </div>
