--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="col-md-8 offset-md-1">
     <%= render "books/book_table", book: @book %>
-    <%= render 'books/comment', book: @book,book_comment: @book_comment%>
+    <%= render 'book_comments/index', book: @book,book_comment: @book_comment%>
   </div>
   
  
