--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,3 +1,3 @@
-$("#book_<%= @book.id %> .comments-count").html("コメント数: <%= @book.book_comments.count %>");
-$(".book_comments").html("<%= j(render 'book_comments/index', book: @book) %>");
-$("#book_comment_comment").val("");
+$(".comment_table").html("<%= j(render 'books/book_table', book: @book) %>");
+$(".detail_table").html("<%= j(render 'book_comments/index', book: @book) %>");
+$("#comment_textarea").val("");
