--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -3,5 +3,5 @@
       <%= render "users/users_table", users: @users %>
 <% elsif @model == 'book' %>
 	<h3>Books search for "<%= @content %>"</h3>
-   <%= render "books/book_table", book: @book %>
+   <%= render "books/books_table", books: @books %>
 <% end %>
