--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,6 +4,12 @@
     <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
     <p>you can share and exchange  your opinions , inpressions , and emotions</p>
     <p> about various books!</p>
+    <% if user_signed_in? %>
+    <div class="btn-wrapper col-10 mx-auto">
+      <div class="row">
+        <%= link_to "Log out", destroy_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_out", method: :delete %>
+      </div>
+    <% else %>
     <div class="btn-wrapper col-10 mx-auto">
       <div class="row">
         <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
@@ -12,5 +18,6 @@
         <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
       </div>
     </div>
+    <% end %>
   </div>
 </div>
