--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,7 @@
           <li><%= link_to " Users", users_path, class: "fas fa-users nav-link text-light" %></li>
           <li><%= link_to " Books", books_path, class: "fas fa-book-open nav-link text-light" %></li>
           <li><%= link_to " logout", destroy_user_session_path,  class: "fas fa-sign-out-alt nav-link text-light", method: :delete %></li>
+          <li><%= render 'layouts/search' %></li>
         <% else %>
           <li><%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %></li>
           <li><%= link_to " About", home_about_path, class: "fas fa-link nav-link text-light" %></li>
