--- a/app/views/books/_books_table.html.erb
+++ b/app/views/books/_books_table.html.erb
@@ -18,6 +18,8 @@
         </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
+        <td id="favorite-btn_<%= book.id %>"><%= render "favorites/favorite-btn", book: book %></td>
+        <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
       </tr>
     <% end %>
   </tbody>
