--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,13 +8,26 @@
         <%= f.text_field :name, class: "form-control" %>
       </div>
       <div class="form-group">
-       <%= f.label :profile_image, "Image" %></br>
-       <%= f.attachment_field :profile_image, placeholder: "ファイルを選択" %>
+       <%= f.label :image, "Image" %></br>
+       <%= f.attachment_field :profile_image, placeholder: "ファイルを選択", class: "user_image" %>
       </div>
       <div class="form-group">
         <%= f.label :introduction, "Introduction" %>
         <%= f.text_area :introduction, class: "form-control" %>
       </div>
+
+      <div class="card" style="width: 18rem;">
+        <div class="card-header">
+          <h5><strong>Cancel my account</strong></h5>
+      </div>
+      <div class="card-body">
+        <h6 class="card-title">Unhappy?</h6>
+        <br/>
+        <a><%= button_to "Cancel my account", users_path(@user_id), data: { confirm: "Are you sure?" }, method: :delete %></a>
+       </div>
+      </div>
+      <br/>
+
       <div class="form-group">
         <%= f.submit "Update User", class: "btn btn-secondary" %>
       </div>
