--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -25,6 +25,11 @@
           <% end %>
         </td>
         <td><%= link_to "Show", user_path(user.id) %></td>
+        <td>
+          <% if current_user != user %>
+             <%= link_to 'Begin Chat', chat_path(user.id) %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
