--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -19,10 +19,15 @@
   </tr>
 </table>
 
-<div class='row'>
+<div class='row justify-content-center'>
   <% if current_user != user %>
     <% if current_user.following?(user) %>
+     <div class="pr-1">
       <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+     </div>
+     <div class="pl-1">
+      <%= link_to 'Begin Chat', chat_path(user.id), class: "btn btn-info"  %>
+     </div>
     <% else %>
       <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
     <% end %>
