--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -27,7 +27,10 @@
         <td><%= link_to "Show", user_path(user.id) %></td>
         <td>
           <% if current_user != user %>
+            <% if current_user.following?(user) %>
              <%= link_to 'Begin Chat', chat_path(user.id) %>
+            <% else %>
+           <% end %>
           <% end %>
         </td>
       </tr>
