--- a/app/views/books/_book_table.html.erb
+++ b/app/views/books/_book_table.html.erb
@@ -15,6 +15,7 @@
       <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に消しますか", class: "btn btn-sm btn-danger" %></td>
       <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
       <td>コメント数: <%= book.book_comments.count %></td>
+      <td>閲覧数: <%= book.hits %></td>
     <% end %>
   </tr>
 </table>
