--- a/app/views/books/_books_table.html.erb
+++ b/app/views/books/_books_table.html.erb
@@ -20,6 +20,7 @@
         <td><%= book.body %></td>
         <td id="favorite-btn_<%= book.id %>"><%= render "favorites/favorite-btn", book: book %></td>
         <td class="comments-count">コメント数: <%= book.book_comments.count %></td>
+        <td>閲覧数: <%= book.hits %></td>
       </tr>
     <% end %>
   </tbody>
