--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,52 @@
   </div>
   <div class='col-md-8 offset-md-1'>
     <%= render "books/books_table", books: @user.books %>
+
+
+    <div class = "table_width">
+     <table class="table table-bordered">
+      <thead>
+       <tr>
+        <th>今日の投稿数</th>
+        <th>前日の投稿数</th>
+        <th>前日比</th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+     　  <td><%= @today_book.count %></td>
+       　<td><%= @yesterday_book.count %></td>
+       　<td>
+         <% if @yesterday_book.count == 0 %>
+          前日の投稿はありません
+         <% else %>
+         　<% @the_day_before =   @today_book.count / @yesterday_book.count.to_f  %>
+         　<%= (@the_day_before * 100).round %>
+         <% end %>
+        </td>
+       </tr>
+       <tr>
+        <th>今週の投稿数</th>
+        <th>先週の投稿数</th>
+        <th>前週比</th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+     　  <td><%= @thisweek_book.count %></td>
+       　<td><%= @lastweek_book.count %></td>
+       　<td>
+         <% if @lastweek_book.count == 0 %>
+          前週の投稿はありません
+         <% else %>
+         　<% @the_week_before =    @thisweek_boo.count / @lastweek_book.count.to_f  %>
+         　<%= (@the_week_before * 100).round %>
+         <% end %>
+        </td>
+       </tr>
+      </tbody>
+     </table>
+   </div>
+
   </div>
 </div>
