--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
     <div class = "table_width">
      <table class="table table-bordered">
       <thead>
-       <tr>
+       <tr class="bg-dark text-white">
         <th>今日の投稿数</th>
         <th>前日の投稿数</th>
         <th>前日比</th>
@@ -29,7 +29,7 @@
          <% end %>
         </td>
        </tr>
-       <tr>
+       <tr class="bg-dark text-white">
         <th>今週の投稿数</th>
         <th>先週の投稿数</th>
         <th>前週比</th>
