--- a/app/views/books/_book_table.html.erb
+++ b/app/views/books/_book_table.html.erb
@@ -9,13 +9,12 @@
     </td>
     <td><%= link_to book.title, book_path(book.id) %></td>
     <td><%= book.body %></td>
-
     <% if current_user == book.user %>
-      <td><%= link_to "Edit", edit_book_path(book.id), class: "btn btn-sm btn-success" %></td>
-      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に消しますか", class: "btn btn-sm btn-danger" %></td>
       <td class="favorite-btn"><%= render "favorites/favorite-btn", book: book %></td>
       <td>コメント数: <%= book.book_comments.count %></td>
       <td>閲覧数: <%= book.hits %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id), class: "btn btn-sm btn-success" %></td>
+      <td><%= link_to "×", book_path(book.id), method: :delete, "data-confirm" => "本当に消しますか", class: "btn btn-sm btn-danger" %></td>
     <% end %>
   </tr>
 </table>
